# superdash

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: claude-code-skills-architecture.md  superpowers-skills-guide.md
docs/plans/: 2026-02-06-superpowers-dashboard-design.md  2026-02-06-superpowers-dashboard-plan.md  2026-02-07-enforcement-and-dashboard-design.md  2026-02-07-enforcement-and-dashboard-plan.md  2026-02-07-superdash-polish-plan.md  2026-02-07-tree-view-design.md  2026-02-07-tree-view-plan.md  2026-02-09-fixes-and-model-tracking-plan.md
src/superpowers_dashboard/: __init__.py  __main__.py  app.py  config.py  costs.py  grouping.py  registry.py  watcher.py
src/superpowers_dashboard/widgets/: activity.py  costs_panel.py  hooks_panel.py  skill_list.py  workflow.py
tests/: test_app_cost.py  test_config.py  test_costs.py  test_grouping.py  test_registry.py  test_watcher.py  test_widget_activity.py  test_widget_costs.py  test_widget_hooks.py  test_widget_skill_list.py  test_widget_workflow.py
tests/fixtures/skills/brainstorming/: SKILL.md
tests/fixtures/skills/writing-plans/: SKILL.md
