[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "superpowers-dashboard"
version = "0.1.0"
description = "Terminal dashboard for Claude Code Superpowers skills"
requires-python = ">=3.11"
dependencies = [
    "textual>=3.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
superdash = "superpowers_dashboard.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
